[project]
name = "blendpack"
description = "Video transition effects for ComfyUI using WebGL rendering with 100+ transition variants across categories like dissolve, wipe, zoom, blur, glitch, and more."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["moderngl>=5.12.0", "opencv-python>=4.8.0", "numpy>=1.24.0", "torch>=2.0.0", "Pillow>=9.0.0"]

[project.urls]
Repository = "https://github.com/SKBv0/ComfyUI_BlendPack"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SKBv0/ComfyUI_BlendPack/wiki"
"Bug Tracker" = "https://github.com/SKBv0/ComfyUI_BlendPack/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_BlendPack"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

